--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,49 @@
-<h1>Shopping List Page</h1>
+<!-- <h1>Shopping List Page</h1>
 
 <h5>Name: </h5>
-<p>Ammara Pranahiza</p> <!-- Ubahlah sesuai dengan nama kamu -->
+<p>Ammara Pranahiza</p> 
 <h5>Class: </h5>
-<p>PBP B</p> <!-- Ubahlah sesuai dengan kelas kamu -->
+<p>PBP B</p>  -->
+
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1>Shopping List Page</h1>
+
+    <h5>Name:</h5>
+    <p>{{name}}</p>
+
+    <h5>Class:</h5>
+    <p>{{class}}</p>
+
+    ...
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Description</th>
+        <th>Date Added</th>
+    </tr>
+
+    {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
+
+    {% for product in products %}
+        <tr>
+            <td>{{product.name}}</td>
+            <td>{{product.price}}</td>
+            <td>{{product.description}}</td>
+            <td>{{product.date_added}}</td>
+        </tr>
+    {% endfor %}
+</table>
+
+<br />
+
+<a href="{% url 'main:create_product' %}">
+    <button>
+        Add New Product
+    </button>
+</a>
+
+
+{% endblock content %}
