--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -16,7 +16,7 @@
     <h5>Class:</h5>
     <p>{{class}}</p>
 
-    ...
+
 <table>
     <tr>
         <th>Name</th>
@@ -39,11 +39,18 @@
 
 <br />
 
+<h5>Sesi terakhir login: {{ last_login }}</h5>
+
 <a href="{% url 'main:create_product' %}">
     <button>
         Add New Product
     </button>
 </a>
 
+<a href="{% url 'main:logout' %}">
+    <button>
+        Logout
+    </button>
+</a>
 
 {% endblock content %}
